<resources>
    <string name="app_name">WHU预约助手</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">功能</string>
    <string name="title_notifications">我</string>
    <string name="main_empty">\n主人，电波无法到达哦\n点我可以重新连接</string>

    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>

    <string name="title_activity_login">登录图书馆</string>
    <string name="login_title_1">武大图书馆选座系统</string>
    <string name="login_title_2">Welcome back!</string>
    <string name="login_agreement">登录表示您同意本应用用户使用协议</string>

    <string name="reserve_room_item_text">当前可用座位数：</string>
    <string name="reserve_seat_reserve_title">请选择座位开始与结束时间</string>
    <string name="reserve_time_selector_title">请选择需要使用座位的时间段</string>
    <string name="reserve_seat_reserve_start">开始时间：</string>
    <string name="reserve_seat_reserve_end">结束时间：</string>
    <string name="reserve_seat_reserve_button">提交预约</string>
    <string name="reserve_time_selector_button">确定</string>
    <string name="reserve_time_select_image_button">时间筛选</string>
    <string name="reserve_layout_image_button">布局选座</string>

    <string name="me_default_title">加载中，请稍等</string>

    <string name="title_activity_stared_seats">我收藏的座位</string>
    <string name="title_activity_exam_mode">考研选座</string>
    <string name="title_activity_lovers_seat">情侣座位</string>
    <string name="title_activity_more_function">更多功能敬请期待</string>

    <string name="setting_clear_user_info">清除本地存储的用户账号</string>
    <string name="setting_clear_user_info_action">清除</string>

    <string name="about_app_name">武大图书馆自习助手</string>
    <string name="about_app_version">V1.2.2</string>
    <string name="about_author">Haotian.X</string>
    <string name="about_team">Haotian.X Wenxiang.S</string>
    <string name="about_contact">Contact with Us</string>
    <string name="about_email">Email(Feedback):i@xht97.cn</string>
    <string name="about_github">Github id@TommyXu97</string>
    <string name="about_thanks">致谢：Open Source Code Library/武大官方微信公众号</string>

</resources>
