<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.AboutActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardMaxElevation="6dp"
        android:clickable="true"
        android:focusable="true"
        android:foregroundGravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@mipmap/ic_launcher"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_app_name"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_app_version"
                android:layout_gravity="center_horizontal"/>

            <View
                android:layout_width="260dp"
                android:layout_height="1dp"
                android:background="#BDBDBD"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"/>

            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_author"
                android:layout_gravity="center_horizontal"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_team"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardMaxElevation="6dp"
        android:clickable="true"
        android:focusable="true"
        android:foregroundGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_contact"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_email"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_github"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_thanks"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>